--- a/notebooks/03_evaluacion.ipynb
+++ b/notebooks/03_evaluacion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "012ff87d",
    "metadata": {},
    "outputs": [
@@ -160,10 +160,7 @@
       "0        0.333333                0.2        0.666667                0.4  \n",
       "1        0.333333                0.2        0.333333                0.2  \n",
       "\n",
-      "📊 Generando visualizaciones...\n",
-      "✅ Gráfico Recall guardado en: c:\\Users\\USER\\RAGModel_MineriaMultimedia_202520\\data\\comparison_recall.png\n",
-      "✅ Gráfico Precision guardado en: c:\\Users\\USER\\RAGModel_MineriaMultimedia_202520\\data\\comparison_precision.png\n",
-      "✅ Gráfico Contexto guardado en: c:\\Users\\USER\\RAGModel_MineriaMultimedia_202520\\data\\comparison_context_size.png\n"
+      "📊 Generando visualizaciones...\n"
      ]
     }
    ],
